# CMake-Tutorial

./: .gitignore  CMakeLists.txt  README.md  main.cpp
MathFunctions/: CMakeLists.txt  mysqrt.cpp  mysqrt.h
pack/_CPack_Packages/Linux/STGZ/: Tutorial-1.0.1-Linux.sh
pack/_CPack_Packages/Linux/TGZ/Tutorial-1.0.1-Linux/include/: TutorialConfig.h
pack/_CPack_Packages/Linux/TZ/: Tutorial-1.0.1-Linux.tar.Z
